1.0 (xxxx-xx-xx)
----------------

- Created recipe with ZopeSkel
  [""]

- Added an initial PloneIDE Recipe's Documentation inside README.txt and setup.py files 
  [macagua]